--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -55,13 +55,13 @@ jobs:
       - name: Commit in batches of 50
         shell: bash
         run: |
-          # Get list of untracked files in VIDEOS_NEW/
-          mapfile -t files < <(git ls-files --others --exclude-standard VIDEOS_NEW/)
+          # Get list of untracked files in VIDEOS/
+          mapfile -t files < <(git ls-files --others --exclude-standard VIDEOS/)
 
-          # Filter out VIDEOS_NEW/Video_0.mp4
+          # Filter out VIDEOS/Video_0.mp4
           filtered_files=()
           for file in "${files[@]}"; do
-            if [[ "$file" != "VIDEOS_NEW/Video_0.mp4" ]]; then
+            if [[ "$file" != "VIDEOS/Video_0.mp4" ]]; then
               filtered_files+=("$file")
             fi
           done
